--- a/app/assets/stylesheets/pages/_invite.scss
+++ b/app/assets/stylesheets/pages/_invite.scss
@@ -5,11 +5,11 @@
   border-bottom:1px solid #313030;
 }
 
-.invite-users {
+.invite-users h2{
   text-align: center;
   font-family: $header-font;
-  font-size: 25px;
-  color: $green;
+  font-size: 30px;
+  color: #254C62;
 }
 
 .update-users {
