--- a/app/assets/stylesheets/pages/_confirm_winner.scss
+++ b/app/assets/stylesheets/pages/_confirm_winner.scss
@@ -142,8 +142,9 @@ select:focus {
   position: relative;
   text-align: center;
   font-family: $header-font;
-  font-size: 25px;
-  color: $green;
+  font-size: 30px;
+  color: #254C62;
+  margin-top: 25px;
 }
 
 .edit-winner {
@@ -154,6 +155,7 @@ select:focus {
 }
 
 .winner-output {
+  color: $green;
   font-family: "Open Sans", "Helvetica", "sans-serif";
   font-size: 25px;
   text-align: center;
