--- a/app/assets/stylesheets/pages/_share_links.scss
+++ b/app/assets/stylesheets/pages/_share_links.scss
@@ -8,6 +8,7 @@ html,
 body {
   background: #fafafa;
   font-family: $base-font;
+  color: white;
 
   a {
     color: #fff;
@@ -29,6 +30,7 @@ body {
   position: absolute;
   top: 50px;
   left: 50%;
+  margin-bottom: 25px;
   transform: translate(-50%, -50%);
   padding: 8px 18px;
   width: 215px;
