--- a/app/views/pools/_chatroom.html.erb
+++ b/app/views/pools/_chatroom.html.erb
@@ -1,19 +1,19 @@
-<div class="container">
+<div class="container text-center">
   <div class="row">
     <div class="col-xs-12">
       <div id="chatroom">
-      <h1>CHAT-ROOM</h1>
-        <div class="row chatbox">
+      <h2>THE PlAYERS' CLUB CHAT ROOM</h2>
+        <div class="chatbox">
           <ul id="messages" class="messages-list">
            <% @pool.messages.last(15).each do |message| %>
            <% if message.user == current_user %>
            <div class= "ownmessagediv">
-             <li> <%= message.message %></li>
+             <li><%= message.message %></li>
            </div>
            <% else %>
            <div class= "messagediv" id="messagediv">
              <li><%= message.user.username %>:
-               <br> <%= message.message %></li>
+             <br><%= message.message %></li>
              </div>
              <% end %>
              <% end %>
