--- a/app/views/pages/_selection_fields.html.erb
+++ b/app/views/pages/_selection_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="nested-fields">
+<div class="nested-fields third">
   <%= f.input :title, placeholder: "outcome (Yes, No...)", label: false, required: true %>
   <%= link_to_remove_association f do %>
     <i class="fa fa-times"></i>
