--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,12 +4,12 @@
     <div class="col-xs-12">
       <h3 class ="tagline">Start your own bet now!</h3>
     </div>
-  </div>
+
   <div class="row">
     <div class="col-xs-12">
       <div class="banner-create">
         <%= simple_form_for(@pool) do |f| %>
-        <%= f.input :title, label: false, required: false, input_html:{class:"bet-title"}, placeholder: "Give a title to your bet..." %>
+        <%= f.input :title, label: false, required: false, input_html:{class:"bet-title first border-change"}, placeholder: "Give a title to your bet..." %>
         <div class="fake-btn btn btn-primary">Create a bet</div>
         <div class="fake-div hidden">
           <div class="body-tabs">
@@ -34,7 +34,7 @@
 
             <div id="description" class="tab-content current">
               <p>What are the rules of the game?</p>
-              <%= f.input :description, label:false, input_html:{class:"description_input"}, placeholder: "e.g. first team to reach 10 goals" %>
+              <%= f.input :description, label:false, input_html:{class:"description_input second"}, placeholder: "e.g. first team to reach 10 goals" %>
             </div>
 
             <div id="selections" class="tab-content">
@@ -54,7 +54,7 @@
               <div class="row">
                   <div class="col-xs-12">
                     <p>For how much are we playing?</p>
-                    <%= f.input :stake, label:false, placeholder: "e.g. 5€", required: true %>
+                    <%= f.input :stake, label:false, input_html:{class:"fourth"}, placeholder: "e.g. 5€", required: true %>
                   </div>
               </div>
             </div>
@@ -90,23 +90,23 @@
         <% end %>
       </div>
     </div>
-  <div class="progress">
-  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="10" aria-valuemax="10" style="width: 50%">
-   50%
-  </div>
-</div>
   </div>
   <%= render 'poolcard' %>
 </div>
 
 
+
+
 <%= content_for :after_js do %>
 <script>
+
+//date picker
   $('#pool_end_date').datetimepicker({
     format: 'DD/MM/YYYY HH:mm',
     minDate: new Date()
   })
 
+//validation on create bet
   $('form').click(function() {
     if( $('#pool_title').val() != "" && $('#pool_description').val() != "" && $('#selections').find( ".nested-fields" ).length >= 2 && $('#pool_stake').val() != "" && $('#pool_end_date').val() != "" && $('#share').find( ".nested-fields" ).length >= 1) {
       $('.real-submit').prop('disabled', false);
