--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -12,6 +12,12 @@
   color:white;
 
 }
+.airbnblogo h3 {
+  margin: 0px;
+}
+.dropdown{
+  margin-bottom:0.5em;
+}
 
 /* Optional class to fix the navbar on top */
 .navbar-wagon-fixed {
