--- a/app/views/users/deposit.html.erb
+++ b/app/views/users/deposit.html.erb
@@ -12,7 +12,7 @@
     <p>Step 3: Balance Updated</p>
   </div> -->
   <!-- <hr> -->
-      <h3>Top up your account</h3>
+      <h3 class="text-center">Top up your account</h3>
       <%= form_tag orders_path do %>
       <%= hidden_field_tag 'user_id', current_user.id %>
       <input type="number" name="balance" id="balance" class="deposit-input">
