--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -212,7 +212,7 @@
   align-items: center;
   justify-content: center;
   p {
-    font-size: 10px;
+    font-size: 12px;
     margin-top: 5px;
     margin-bottom: 5px;
     font-family: $base-font;
@@ -226,25 +226,16 @@
 }
 
 ul.tabs{
-  margin: 0px;
+  margin: auto;
   padding: 0px;
   list-style: none;
-  background-color: none;
   display: flex;
+  width: 90%;
 }
 
 ul.pool-tabs {
   background-color: #254C62;
   border-radius: 5px;
-  width: 500px;
-}
-
-ul.tabs{
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-  background-color: none;
-  display: flex;
 }
 
 ul.tabs li{
@@ -259,12 +250,7 @@ ul.tabs li{
   border-left-style: none;
   border-color: $gray;
   border-width: 1px;
-  &:first-child {
-    border-radius: 4px 0 0 4px;
-  }
-  &:last-child {
-    border-radius: 0 4px 4px 0;
-  }
+  border-radius: 4px;
 }
 
 
@@ -275,7 +261,6 @@ ul.tabs li.current{
 
     ul.pool-tabs li{
     border-radius: 5px;
-    width: 70px;
     margin-left: 10px;
     border-style: none;
     padding: 0px;
