bet selection fixed.

--- a/app/views/pools/_chatroom.html.erb
+++ b/app/views/pools/_chatroom.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <div id="chatroom">
-      <h2>THE PlAYERS' CLUB CHAT ROOM</h2>
+      <h2>THE PLAYERS' CLUB CHAT ROOM</h2>
         <div class="chatbox">
           <ul id="messages" class="messages-list">
            <% @pool.messages.last(15).each do |message| %>
