--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -27,7 +27,7 @@
         <div class="flipper">
           <div class="front">
           <% if @pool.bets.where(user_id: current_user.id).any? %>
-            <div class="pop-up">You just placed a bet, good luck!</div>
+            <div class="pop-up">You just placed a bet on <%= @my_selection.first.title %>, good luck!</div>
           <% end %>
             <div>
               <%= render 'placebet', my_selection: @my_selection %>
@@ -93,11 +93,12 @@
   // if I click on selection of bet
   $(".bet-selection").click(function(){
     // if the bet is not finished (hacky code)
-    if ($("#pool-<%= @pool.id %>").text() != "Bet closed"){
+    var hasSelection = <%=  @my_selection.any? %>;
+    if (!hasSelection && $("#pool-<%= @pool.id %>").text() != "Bet closed"){
       // make buttons green with active class
       $(".bet-selection").removeClass("active");
       $(this).toggleClass("active");
-      $(".confirmbutton").addClass("active");
+      // $(".confirmbutton").addClass("active");
     }
   });
 
