users can't go negative on balance

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap-select";
+@import "sweetalert";
 
 // Your CSS
 @import "layout/index";
