--- a/app/views/pools/_share_links.html.erb
+++ b/app/views/pools/_share_links.html.erb
@@ -1,20 +1,22 @@
 <div class="share">
+<h6>SHARE</h6>
+<br>
+<div class="sharelinkshh">
   <a href="https://www.facebook.com/login.php?skip_api_login=1&api_key=966242223397117&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fsharer%2Fsharer.php%3Fu%3Dhttp%253A%252F%252Fcodepen.io%252Fsupah%252Fpen%252FMKNwZV&cancel_url=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Freturn%2Fclose%3Ferror_code%3D4201%26error_message%3DUser%2Bcanceled%2Bthe%2BDialog%2Bflow%23_%3D_&display=popup&locale=en_GB" target="_blank" class="ico fb">
-    <i class="fa fa-facebook"></i>
+    <i class="fa fa-facebook fa-2x"></i>
   </a>
 
   <a href="https://twitter.com/login?redirect_after_login=%2Fhome%3Fstatus%3DSocial%2520Share%2520by%2520%2540supahfunk%2520http%253A%2F%2Fcodepen.io%2Fsupah%2Fpen%2FMKNwZV" target="_blank" class="ico tw">
-    <i class="fa fa-twitter"></i>
+    <i class="fa fa-twitter fa-2x"></i>
   </a>
   <a href="whatsapp://send?abid=username&text=HeyThere!" target="_blank" class="ico wa">
-    <i class="fa fa-whatsapp"></i>
+    <i class="fa fa-whatsapp fa-2x"></i>
   </a>
-  <span class="text">
+  </div>
+  <!-- <span class="text">
     <em>SHARE</em>
   </span>
-  <svg class="ico-share">
-    <use xlink:href="#ico-share"></use>
-  </svg>
+ -->
 </div>
 <!-- <div class="share">
   <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//codepen.io/supah/pen/MKNwZV" target="_blank" class="ico fb">
