fix some stuffffff

--- a/app/assets/stylesheets/pages/_invite.scss
+++ b/app/assets/stylesheets/pages/_invite.scss
@@ -1,8 +1,9 @@
-
 .line-separator {
   height:1px;
   background:#717171;
-  border-bottom:1px solid #313030;
+  border-bottom:1px solid grey;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .invite-users h2{
