--- a/app/assets/stylesheets/pages/_chatbox.scss
+++ b/app/assets/stylesheets/pages/_chatbox.scss
@@ -4,6 +4,15 @@
   text-size: 30px;
   margin-bottom: 25px;
 }
+
+.line-separator {
+  height:1px;
+  background:#717171;
+  border-bottom:1px solid $gray;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
 .chatbox{
   // margin: 20px;
   // position: relative;
