--- a/app/assets/stylesheets/pages/_confirm_winner.scss
+++ b/app/assets/stylesheets/pages/_confirm_winner.scss
@@ -2,8 +2,11 @@
 .line-separator {
   height:1px;
   background:#717171;
-  border-bottom:1px solid #313030;
+  border-bottom:1px solid $gray;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
+
 
 
 label {
