--- a/app/assets/stylesheets/pages/_participants.scss
+++ b/app/assets/stylesheets/pages/_participants.scss
@@ -1,3 +1,18 @@
+
+.container h2 {
+  color: #254C62;
+  font-size: 30px;
+}
+
+.line-separator {
+  height:1px;
+  background:#717171;
+  border-bottom:1px solid $gray;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+
 .avatar-participant{
   height: 65px;
   width: 65px;
