--- a/app/assets/stylesheets/pages/_share_links.scss
+++ b/app/assets/stylesheets/pages/_share_links.scss
@@ -1,3 +1,12 @@
+
+.line-separator {
+  height:1px;
+  background:#717171;
+  border-bottom:1px solid $gray;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
 *,
 *::before,
 *::after {
