--- a/app/views/pools/_invite_fields.html.erb
+++ b/app/views/pools/_invite_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="nested-fields">
-  <%= f.association :user, prompt: "invite a friend", label: false, collection: (User.all), label_method: ->(obj){ obj.email } %>
+  <%= f.association :user, prompt: "invite a friend", label: false, collection: (User.all.where.not(id: current_user.id)), label_method: ->(obj){ obj.email } %>
   <%= link_to_remove_association f do %>
     <i class='fa fa-times' id='remove-invite'></i>
   <% end %>
