changed some styling in displaying participants

--- a/app/assets/stylesheets/pages/_participants.scss
+++ b/app/assets/stylesheets/pages/_participants.scss
@@ -18,3 +18,12 @@
 .flex-participants p {
  margin-left: 10px;
 }
+
+#selection-text {
+  text-align: left;
+  font-style: italic;
+}
+
+#selection-name {
+  font-weight: bold;
+}
