redesign deposit part

--- a/app/assets/stylesheets/pages/_confirm_winner.scss
+++ b/app/assets/stylesheets/pages/_confirm_winner.scss
@@ -98,9 +98,9 @@ x:-o-prefocus, .dropdown::after {
 
 
 /* Hover style */
-.dropdown:hover {
-  border:1px solid #888;
-}
+// .dropdown:hover {
+//   border:1px solid #888;
+// }
 
 /* Focus style */
 select:focus {
