--- a/app/assets/stylesheets/pages/_placeyourbet.scss
+++ b/app/assets/stylesheets/pages/_placeyourbet.scss
@@ -12,19 +12,25 @@
   border: none;
   border-radius: 5px;
   box-shadow: 0;
+  display: block;
+  width: 100%;
+  line-height: 60px;
+  background: #FFB00E;
+  border-radius: 50px;
+  opacity: 0.3;
   &.active {
-  background: $green;
-  opacity: 1;
+    background: #FFB00E;
+    opacity: 1;
     &:hover {
       background-color: $green;
     }
-    &:active {
-      background-color: $green;
-      box-shadow: 0;
-    }
-    &:focus {
-      background-color: $green !important;
-    }
+    // &:active {
+    //   background-color: $green;
+    //   box-shadow: 0;
+    // }
+    // &:focus {
+    //   background-color: $green !important;
+    // }
   }
 
   &:hover {
@@ -42,14 +48,14 @@
 
 .bet-selections {
   display: flex;
-  justify-content: space-between;
   margin: 20px 0;
   flex-wrap: wrap;
 }
 
 .bet-selection {
   color: white;
-  flex: 0 0 30%;
+  flex:1;
+  margin: 5px;
   background: $blue;
   padding: 20px;
   border-radius: 5px;
