--- a/app/views/users/deposit.html.erb
+++ b/app/views/users/deposit.html.erb
@@ -15,8 +15,9 @@
       <h3 class="text-center">Top up your account</h3>
       <%= form_tag orders_path do %>
       <%= hidden_field_tag 'user_id', current_user.id %>
-      <input type="number" name="balance" id="balance" class="deposit-input">
-      <%= submit_tag 'Deposit', class: 'btn btn-primary depositbtn' %>
+      <input type="number" name="balance" id="balance" class="deposit-input form-control" placeholder="10€, 25€, 50€, your call!">
+      <br>
+      <%= submit_tag 'Deposit', class: 'btn btn-primary depositbtn', style: "width: 100%" %>
     <% end %>
       </div>
     </div>
