--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,7 @@
-<h1>Order</h1>
-<ul>
-  <li>Status: <%= @order.state %></li>
-  <li>Item: <%= @order.user %></li>
-  <li>Amount: <%= humanized_money_with_symbol(@order.balance) %></li>
-<ul>
+
+<div class="deposit-confirmation box text-center">
+  <div>
+    <%= image_tag "check.png", width: "100" %>
+    <h3 style="color: #333333; font-weight: lighter;">You've just deposited <strong style="color: #00C522"><%= humanized_money_with_symbol(@order.balance) %></strong></h3>
+  </div>
+</div>
