--- a/app/assets/stylesheets/pages/_pools_show.scss
+++ b/app/assets/stylesheets/pages/_pools_show.scss
@@ -73,3 +73,24 @@
 }
 
 
+#pool-page {
+  h2 {
+    font-size: 17px;
+    margin: 0px;
+  }
+}
+
+.pool-section-container {
+  margin: 5px;
+  background: #f1f1f1;
+  padding: 20px 10px;
+  border-radius: 12px;
+  &.first {
+    margin-top: 20px;
+  }
+  &.last {
+    margin-bottom: 20px;
+  }
+}
+
+
