--- a/app/views/pools/_participants.html.erb
+++ b/app/views/pools/_participants.html.erb
@@ -1,19 +1,20 @@
-<div class="container">
-<div class="line-separator"></div>
-<h2>THE BOLD PARTICIPANTS</h2>
-<div class="line-separator"></div>
-<div class="participants-roster">
-<% @pool.bets.each do |bet| %>
-  <div class="col-xs-12">
-    <% participant_url = bet.user.facebook_picture_url || "http://placehold.it/30x30" %>
-    <div class="flex-participants">
-      <p><%= image_tag participant_url, class: "avatar-participant"%></p>
-      <div>
-      <p id="selection-name"><%= "#{bet.user.first_name} #{bet.user.last_name}" %></p>
-      <p id="selection-text"><%= "#{bet.selection.title}" %></p>
-      </div>
+<div class="col-xs-12">
+  <div class="pool-section-container last">
+    <h2>THE BOLD PARTICIPANTS</h2>
+    <div class="participants-roster">
+
+      <% 3.times do %>
+      <% @pool.bets.each do |bet| %>
+        <% participant_url = bet.user.facebook_picture_url || "http://placehold.it/30x30" %>
+        <div class="flex-participant">
+          <%= image_tag participant_url, class: "avatar-participant"%>
+          <div>
+            <p id="selection-name"><%= ["Sponge Bob", "antonio miguel Lima", "Edouard le beau et fort", "Short guy"].sample %>  <%= "#{bet.user.first_name} #{bet.user.last_name}" %></p>
+            <p id="selection-text">Bet on "<%= "#{bet.selection.title}" %>"</p>
+          </div>
+        </div>
+      <% end %>
+      <% end %>
     </div>
   </div>
-<% end %>
-</div>
 </div>
