--- a/app/assets/stylesheets/pages/_participants.scss
+++ b/app/assets/stylesheets/pages/_participants.scss
@@ -19,7 +19,7 @@
   border-radius: 100%;
 }
 
-.flex-participants {
+.flex-participant {
   display: flex;
   flex-direction: row;
   justify-content: flex-initial;
@@ -28,10 +28,22 @@
   margin: 0 auto;
   margin-bottom: 5px;
   margin-top: 5px;
+  margin: 10px 20px;
+  background: white;
+  padding: 10px;
+  border-radius: 10px;
+  img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
-.flex-participants p {
- margin-left: 10px;
+.flex-participant p {
+  margin-left: 10px;
+  margin-bottom: 0px;
+}
+.flex-participant p:last-child {
+  margin-bottom: 0px;
 }
 
 #selection-text {
