--- a/app/assets/stylesheets/pages/_placeyourbet.scss
+++ b/app/assets/stylesheets/pages/_placeyourbet.scss
@@ -54,11 +54,12 @@
 }
 
 .bet-selection {
-  flex: 0 0 47%;
+  flex: 1 0 47%;
   color: white;
   background: #234C63;
   padding: 20px;
   border-radius: 5px;
+  margin: 5px;
   text-align: center;
   display: flex;
   align-items: center;
