--- a/app/views/pools/_participants.html.erb
+++ b/app/views/pools/_participants.html.erb
@@ -3,18 +3,20 @@
     <h2>THE BOLD PARTICIPANTS</h2>
     <div class="participants-roster">
 
-      <% 3.times do %>
+      <% if @pool.bets.empty? %>
+        <p class="text-center" style="color: lightgrey">No best bet yet...</p>
+      <% end %>
       <% @pool.bets.each do |bet| %>
         <% participant_url = bet.user.facebook_picture_url || "http://placehold.it/30x30" %>
         <div class="flex-participant">
           <%= image_tag participant_url, class: "avatar-participant"%>
           <div>
-            <p id="selection-name"><%= ["Sponge Bob", "antonio miguel Lima", "Edouard le beau et fort", "Short guy"].sample %>  <%= "#{bet.user.first_name} #{bet.user.last_name}" %></p>
+            <p id="selection-name"><%= "#{bet.user.first_name} #{bet.user.last_name}" %></p>
             <p id="selection-text">Bet on "<%= "#{bet.selection.title}" %>"</p>
           </div>
         </div>
       <% end %>
-      <% end %>
+
     </div>
   </div>
 </div>
