--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -1,4 +1,17 @@
 
+<% if @pool.selections.where(winning_selection: true).count > 0 %>
+  <div class="winner-alert hidden" style="background-color: green;">
+  🏆 <%= @winner.title + "!" %> has won 🏆
+  </div>
+<% else %>
+  <div class="winner-alert hidden">
+  🏆 Time to <a href="#winner">choose the winner</a> 🏆
+  </div>
+<% end %>
+
+
+
+
 <div class="container" id="pool-page">
  <!--  <div class="flip-container" ontouchstart="this.classList.toggle('hover');"> -->
     <div class="row">
@@ -71,6 +84,9 @@
     $(this).on('finish.countdown', function(){
       // add bet closed text insead of the countdown numbers
       $("#pool-<%= @pool.id %>").html("Bet closed").addClass("finish");
+      $(".winner-alert").removeClass("hidden");
+      document.getElementById("declarewinner").disabled = false;
+      $("#winner-selection-submit").removeAttr("disabled");
 
       // if I click on the selection buttons, shake the bet closed and prevent clicking
       $(".bet-selection").click(function(e){
