changes on winner selection

--- a/app/assets/stylesheets/pages/_confirm_winner.scss
+++ b/app/assets/stylesheets/pages/_confirm_winner.scss
@@ -147,7 +147,6 @@ select:focus {
   font-family: $header-font;
   font-size: 30px;
   color: #254C62;
-  margin-top: 25px;
 }
 
 .edit-winner {
@@ -158,12 +157,12 @@ select:focus {
 }
 
 .winner-output {
-  color: $green;
-  font-family: "Open Sans", "Helvetica", "sans-serif";
-  font-size: 25px;
-  text-align: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  // color: $green;
+  // font-family: "Open Sans", "Helvetica", "sans-serif";
+  // font-size: 25px;
+  // text-align: center;
+  // margin-top: 25px;
+  // margin-bottom: 25px;
 }
 
 
