--- a/app/assets/stylesheets/pages/_pools_show.scss
+++ b/app/assets/stylesheets/pages/_pools_show.scss
@@ -111,6 +111,10 @@
 #winner {
   height: 100vh;
   padding-top: 50px;
+  margin: 5px;
+  background: #f1f1f1;
+  padding: 20px 10px;
+  border-radius: 12px;
 }
 
 
