minor wording changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
                 <p>3. stake</p>
               </li>
               <li class="tab-link" data-tab="timer"><%=image_tag "Clock.png", class:"bet_creation-icon"%>
-                <p>4. start</p>
+                <p>4. timer</p>
               </li>
               <li class="tab-link last-tab" data-tab="share"><%=image_tag "Shape.png", class:"bet_creation-icon"%>
                 <p>5. share</p>
