--- a/app/views/pools/_share_links.html.erb
+++ b/app/views/pools/_share_links.html.erb
@@ -9,7 +9,7 @@
   <a href="https://twitter.com/login?redirect_after_login=%2Fhome%3Fstatus%3DSocial%2520Share%2520by%2520%2540supahfunk%2520http%253A%2F%2Fcodepen.io%2Fsupah%2Fpen%2FMKNwZV" target="_blank" class="ico tw">
     <i class="fa fa-twitter fa-2x"></i>
   </a>
-  <a href="whatsapp://send?abid=username&text=HeyThere!" target="_blank" class="ico wa">
+  <a href="whatsapp://send?abid=username&text= Yo player you want to get in on the action?: http://www.betfriendsforever.co.uk/pools/1" target="_blank" class="ico wa">
     <i class="fa fa-whatsapp fa-2x"></i>
   </a>
   </div>
