--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <meta property="og:title" content="Bet Friends Forever - When social event become a thrilling experience">
+    <meta property="og:title" content="Bet Friends Forever - Because betting is better when you're best friends forever!">
     <meta property="og:image" content="bf-friends.jpg">
-    <meta property="og:description" content="Bet Friends Forever is the best social betting webiste. Checkout by yourself and start betting with friends!">
+    <meta property="og:description" content="Bet Friends Forever: helping drunk people lose money since 2017.  Start winning more than just bragging rights when you make bets with your buddies!">
     <meta property="og:site_name" content="Bet Friends Forever"/>
 
   </head>
